--- a/src/Modal/Modal.module.css
+++ b/src/Modal/Modal.module.css
@@ -1,11 +1,13 @@
 .modal{
     position: fixed;
     top:10rem;
-    left: 40%;
-    height: 10vh;
-    width: 30%;
+    left: calc(50% -20rem);
+    height: auto;
+    width: 40rem;
     z-index: 10;
+
     background-color: white;
+    padding: 1rem;
 }
 .backdrop{
     position: fixed;
