--- a/src/Cart/Cart.module.css
+++ b/src/Cart/Cart.module.css
@@ -1,8 +1,18 @@
-.li{
+.list{
     display: flex;
+    padding: 1rem 0;
     justify-content: space-between;
     text-decoration: none;
     width: 100%;
     margin-bottom: 10px;
     border-bottom: 2px solid black;
+}
+.cartItems{
+    width: 100%;
+    padding: 0;
+}
+.foot{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
 }
