--- a/src/Modal/Modal.module.css
+++ b/src/Modal/Modal.module.css
@@ -1,11 +1,11 @@
 .modal{
     position: fixed;
     top:10rem;
-    left: calc(50% -20rem);
+    left: 50%;
     height: auto;
     width: 40rem;
     z-index: 10;
-
+    transform: translate(-50%, -50%);
     background-color: white;
     padding: 1rem;
 }
